--- a/arturo-api.properties
+++ b/arturo-api.properties
@@ -4,3 +4,5 @@ server.port=3456
 
 # This is to allow RefreshScope in our app for when new properties are added to this config file
 management.endpoints.web.exposure.include=*
+
+funnyApiName=this 'un
